subida para entrega de sass1

--- a/discografia.html
+++ b/discografia.html
@@ -12,14 +12,14 @@
 </head>
 
 <body class="contenedorgriddisco">	
-	<nav id="nav" class="navbar navbar-expand-md j ">
+	<nav id="nav" class="navbar navbar-expand-md ">
 		<div class="container-fluid">
 			<!-- este es el boton mcdonald -->
-			<a  href="index.html"><img  src="img/nnnn.png" alt= "logo de marilyn manson"> </a>
+			<a  href="index.html"><img  src="img/mm.png" alt= "logo de marilyn manson"> </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse j" id="navbarNav">
+			<div class="collapse navbar-collapse " id="navbarNav">
 				<ul >
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="index.html">HOME</a>
@@ -40,36 +40,43 @@
 			</div>
 		</div>
 	</nav>
-	<header id="header" class="text-center "> 
+	<header id="header" > 
 
 		<img src=" img/disco.jpg" class="paddingto" alt="mariylyn manson foto">	
 	</header>
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main id="main">
-		<h1 class="text-center">DISCOGRAFIA DE MARILYN MANSON</h1>
+		<h1 >DISCOGRAFIA DE MARILYN MANSON</h1>
 		<div class="flexdisco">   
-			<div class="text-center">
+			<div >
 				<article >
 					<h4> A Potrait American Family - 1994 </h4>
 					<img src="img/discos/portrait.jpg" alt="imagen del album portrait american family">
 				</article>
 				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=4jYpcJBouVE" role="button" target="_blank">Escuchar en youtube</a>
 			</div>
-			<div class="text-center">
+			<div >
 				<article >
 					<h4>Antichrist Superstar - 1996</h4>
 					<img src="img/discos/super.jpg" alt="imagen del album 	antichrist superstar">
 				</article>
 				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=uW94OQzDAMg" role="button " target="_blank">Escuchar en youtube</a>
 			</div >
-			<div class="text-center">
+			<!-- <div >
+				<article >
+					<h4>Remix And Repent! - 1998</h4>
+					<img src="img/discos/ryr.jpg" alt="imagen del album 	antichrist superstar">
+				</article>
+				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=uW94OQzDAMg" role="button " target="_blank">Escuchar en youtube</a>
+			</div > -->
+			<div >
 				<article >
 					<h4 >Mechanical Animals - 1998</h4>
 					<img src="img/discos/mechanical.jpg" alt="imagen del album 	mechanical animals">
 				</article>
 				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=6Fn7gd08hAE&list=PLBzBwYhHpqLL9QFeI2Q7FT7dQoTsI2hcl" target="_blank" role="button">Escuchar en youtube</a>
 			</div>
-			<div class="text-center">
+			<div >
 				<article >
 					<h4 >The Last Tour On Earth - 1999</h4>
 
@@ -77,7 +84,7 @@
 				</article>
 				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=YERLixP10Ho&list=PLuIgBDZwi9eXHCbN4hf2zAq_Np_cO-1Kl" target="_blank" role="button">Escuchar en youtube</a>
 			</div>
-			<div class="text-center">
+			<div >
 				<article>
 					<h4 >Holy Wood (In The Shadow Of The Valley Of Death) - 2000</h4>
 						<img src="img/discos/holly.jpg" alt="imagen del album 	Holy Wood (In The Shadow Of The Valley Of Death)">
@@ -85,7 +92,7 @@
 				</article>
 				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=oM81q5WlDlc&list=PL6ogdCG3tAWgFvMVkAhZISG5g0vn-8lfr" target="_blank" role="button">Escuchar en youtube</a>
 			</div>
-			<div class="text-center">
+			<div >
 				<article >
 					<h4>The Golden Age Of Grotesque- 2003</h4>	
 						<img src="img/discos/thegolden.jpg" alt="imagen del album 	The Golden Age Of Grotesque 2003">
@@ -93,7 +100,7 @@
 				</article>
 				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=WGUzKMxb3NU" target="_blank" role="button">Escuchar en youtube</a>
 			</div>
-			<div class="text-center">
+			<div >
 				<article >
 					<h4 >Lest We Forget The Best Of MM- 2004</h4>	
 
@@ -103,14 +110,14 @@
 				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=v6UkQqrkfuU&list=PLPhQKb2xhZJ_WXp_uf_VgpXz5hiIyIUvr" target="_blank"  role="button">Escuchar en youtube</a>
 			</div>
 
-			<div class="text-center">
+			<div >
 				<article >
 					<h4 >Eat Me, Drink Me - 2007</h4>
 					<img src="img/discos/eatmedrinkme.jpg" alt="imagen del album 	Eat Me, Drink Me 2007">
 				</article>
 				<a class="btn btn-primary"  href="https://www.youtube.com/watch?v=q6BKiIcUq_s&list=PL5OU5WvFqBTiB3oUb-RxASnQ0G34aC7sF" target="_blank"  role="button">Escuchar en youtube</a>
 			</div>
-			<div class="text-center">
+			<div >
 				<article >
 					<h4>The High End Of Low - 2009</h4>	
 					<img src="img/discos/high.jpg" alt="imagen del album 	The High End Of Low 2009">
@@ -118,7 +125,7 @@
 				</article>
 				<a class="btn btn-primary"  href="https://www.youtube.com/watch?v=LaEekA7WPLU&list=PLxzSZG7g8c8yvuP6uxXoFv-_tNsXjLspQ" target="_blank"  role="button">Escuchar en youtube</a>
 			</div>
-			<div class="text-center"> 
+			<div > 
 				
 				
 				<article >
@@ -127,7 +134,7 @@
 				</article>
 				<a class="btn btn-primary"  href="https://www.youtube.com/watch?v=0iXJzrFDAVM&list=PL3EsyX1NZFvXHlMTneiiJ8Yju5r9awLLl " target="_blank" role="button">Escuchar en youtube</a>
 			</div>
-			<div class="text-center">
+			<div >
 
 				<article >
 					<h4 >The Pale Emperor - 2014</h4>	
@@ -136,14 +143,14 @@
 				</article>
 				<a class="btn btn-primary"  href="https://www.youtube.com/watch?v=sezJKs8xmOU" target="_blank" role="button">Escuchar en youtube</a>
 			</div>
-			<div class="text-center">
+			<div >
 				<article >
 					<h4>Heaven Upside Down - 2017</h4>	
 					<img src="img/discos/heaven.jpg" alt="imagen del album Heaven Upside Down">
 				</article>
 				<a class="btn btn-primary"  href="https://www.youtube.com/watch?v=LKbECUrFM8I&list=PL6ogdCG3tAWg2XpnMOh5mKO5hcSNZIKD6" target="_blank" target="_blank" role="button">Escuchar en youtube</a>
 			</div>
-			<div class="text-center p-3"> 
+			<div class=" p-3"> 
 				<article >
 					<h4 >We Are Chaos - 2020</h4>
 					<img  src="img/discos/chaos.jpg" alt="imagen del album We Are Chaos 2020">
@@ -152,7 +159,7 @@
 			</div>
 		</div>
 	</main> 
-	<footer id="footer" class="contfo" >
+	<footer id="footer" >
 		<h5 >SITIOS OFICIALES</h5>
 		<article>
 			<a href="https://www.facebook.com/MarilynManson" target="_blank">
@@ -171,7 +178,7 @@
 		</article>
 		<article>
 			<a href="https://www.marilynmanson.com/" target="_blank">
-				<img src="img/logo1.png">
+				<img src="img/mm.png">
 			</a>
 		</article>
 		
