--- a/galeria.html
+++ b/galeria.html
@@ -11,14 +11,14 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body class="contenedorgridgaleria">
-	<nav id="nav" class="navbar navbar-expand-md j fx">
+	<nav id="nav" class="navbar navbar-expand-md">
     <div class="container-fluid">
      <!-- este es el boton mcdonald -->
-     <a  href="index.html"><img  src="img/nnnn.png" alt= "logo de marilyn manson"> </a>
+     <a  href="index.html"><img  src="img/mm.png" alt= "logo de marilyn manson"> </a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse j" id="navbarNav">
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul >
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="index.html">HOME</a>
@@ -39,12 +39,11 @@
     </div>
   </div>
 </nav>
-
-<header id="header" class="text-center"> 
- <img  src=" img/gale.jpg">	
+<header id="header"> 
+ <img  src="img/hh.jpg">	
 </header>
-<main  class="background-image" id="main">
-  <h1 class="text-center supergrande">GALERIA DE IMAGENES DE MARILYN MANSON</h1>
+<main  id="main">
+  <h1 >GALERIA DE IMAGENES DE MARILYN MANSON</h1>
   <div>
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -91,32 +90,32 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-      <h2 class="text-center text-colorwhite medio m-3">Desplaza las imagenes con los controles de los bordes o dezplaza con el dedo</h2>
+      <h2 class="m-3">Desplaza las imagenes con los controles de los bordes o dezplaza con el dedo</h2>
     </div>
     <div >
       <img src="img/giphy.gif" class="d-block w-100">
     </div>
   </main>
-  <footer id="footer" class="contfo" >
-   <h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
+  <footer id="footer">
+   <h5 >SITIOS OFICIALES</h5>
    <article>
     <a href="https://www.facebook.com/MarilynManson" target="_blank">
-     <img class="animacion__footer" src="img/f.png">
+     <img src="img/f.png">
    </a>
  </article>
  <article>
   <a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-   <img class="animacion__footer" src="img/in.png">
+   <img  src="img/in.png">
  </a>
 </article>
 <article>
   <a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-   <img class="animacion__footer" src="img/yu.png">
+   <img  src="img/yu.png">
  </a>
 </article>
 <article>
   <a href="https://www.marilynmanson.com/" target="_blank">
-   <img class="animacion__footer"  src="img/logo1.png">
+   <img  src="img/mm.png">
  </a>
 </article>
 
