--- a/tour.html
+++ b/tour.html
@@ -15,11 +15,11 @@
 	<nav id="nav" class="navbar navbar-expand-md j fx">
 		<div class="container-fluid">
 			<!-- este es el boton mcdonald -->
-			<a  href="index.html"><img  src="img/nnnn.png" alt= "logo de marilyn manson"> </a>
+			<a  href="index.html"><img  src="img/mm.png" alt= "logo de marilyn manson"> </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse j" id="navbarNav">
+			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul >
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="index.html">HOME</a>
@@ -46,8 +46,8 @@
 	<header id="header" >
 		<img src=" img/black.jpg" alt="marilyn manson foto"> 
 	</header>	<!-- FIN DEL HEADER (UNA IMAGEN)---->
-	<main  class="flex2 fondotour" id="main">
-		<h1 class="margin2 paddingto ">HISTORIAL DE TOUR DE LA BANDA</h1> 
+	<main  class="flex2 " id="main">
+		<h1 class="margin2 paddingto ">HISTORIAL DE TOURS</h1> 
 		<table class="table table-bordered  -´+">
 			<thead>
 				<tr>
@@ -132,7 +132,7 @@
 		</table>
 	</main>
 	<footer id="footer" >
-		<h5 class="text-center">SITIOS OFICIALES</h5>
+		<h5 >SITIOS OFICIALES</h5>
 		<article>
 			<a href="https://www.facebook.com/MarilynManson" target="_blank">
 				<img src="img/f.png">
@@ -150,7 +150,7 @@
 		</article>
 		<article>
 			<a href="https://www.marilynmanson.com/" target="_blank">
-				<img  src="img/logo1.png">
+				<img  src="img/mm.png">
 			</a>
 		</article>
 
