--- a/contacto.html
+++ b/contacto.html
@@ -14,13 +14,13 @@
 
 <body class="contenedorgridcont">
 	<nav id="nav" class="navbar navbar-expand-md ">
-		<div class="container-fluid ">
+		<div class="container-fluid j">
 			<!-- este es el boton mcdonald -->
-			<a  href="index.html"><img  src="img/nnnn.png" alt= "logo de marilyn manson"> </a>
+			<a  href="index.html"><img  src="img/mm.png" alt= "logo de marilyn manson"> </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse j" id="navbarNav">
+			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul >
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="index.html">HOME</a>
@@ -49,10 +49,10 @@
 	</header>
 
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
-	<main id="main" class=" semigrande ">
-		<div class="for">
+	<main id="main">
+		<div class="flex">
 			<form  id="form" action="envio.php">
-				<h1  class="text-center paddingto">CONTACTOS Y SUGERENCIAS: 
+				<h1  class="paddingto">CONTACTOS Y SUGERENCIAS: 
 				</h1>
 				<label for="">Nombre:</label>
 				<input type="text"  id="nombre" placeholder="Ingrese su nombre"required>
@@ -86,26 +86,26 @@
 					</main>
 
 
-					<footer id="footer" class="contfo" >
-						<h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
+					<footer id="footer"  >
+						<h5 >SITIOS OFICIALES</h5>
 						<article>
 							<a href="https://www.facebook.com/MarilynManson" target="_blank">
-								<img class="animacion__footer" src="img/f.png">
+								<img  src="img/f.png">
 							</a>
 						</article>
 						<article>
 							<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-								<img class="animacion__footer" src="img/in.png">
+								<img  src="img/in.png">
 							</a>
 						</article>
 						<article>
 							<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-								<img class="animacion__footer" src="img/yu.png">
+								<img  src="img/yu.png">
 							</a>
 						</article>
 						<article>
 							<a href="https://www.marilynmanson.com/" target="_blank">
-								<img class="animacion__footer"  src="img/logo1.png">
+								<img   src="img/mm.png">
 							</a>
 						</article>
 
