--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body class="contenedorgrid ">
-	<nav id="nav" class="navbar navbar-expand-md j ">
+	<nav id="nav" class="navbar navbar-expand-md ">
 		<div class="container-fluid">
 			<!-- este es el boton mcdonald -->
-			<a  href="index.html"><img  src="img/nnnn.png" alt= "logo de marilyn manson"> </a>
+			<a  href="index.html"><img  src="img/mm.png" alt= "logo de marilyn manson"> </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse j" id="navbarNav">
+			<div class="collapse navbar-collapse " id="navbarNav">
 				<ul >
 					<li class="nav-item">
 						<a class="nav-link ul" aria-current="page" href="index.html">HOME</a>
@@ -46,30 +46,30 @@
 
 			<div >
 				<h1 >MARILYN MANSON</h1>
-				<p>Marilyn Manson (nacido Brian Hugh Warner, 5 de enero de 1969, Canton, Ohio, Estados Unidos) es un cantante, compositor,actor, escritor, pintor y director de cine estadounidense, conocido por su personalidad e imagen controvertidas como vocalista ylíder de la banda de metal industrial Marilyn Manson. Su nombre artístico se formó a partir de los nombres de la actriz Marilyn Monroe y del convicto Charles Manson.
-				Apareció en algunas películas como Jawbreaker, Lost Highway de David Lynch y Party Monster. No sólo se dedica a la música, sino también a la pintura. Figura en el lugar número 44 en la lista de los 100 mejores vocalistas de metal de todos los tiempos, según Hit Parader. Manson además ha sido certificado por el IFPI como uno de los 100 artistas más exitosos de todos los tiempos y ostenta un puesto entre los 5 artistas del Industrial Metal más exitosos, certificando 50 millones de discos vendidos. Manson tiene su alter ego andrógino llamado "Omega" que apareció en su álbum de estudio "Mechanical Animals" </p>
+				<p>Marilyn Manson (nacido Brian Hugh Warner, 5 de enero de 1969, Canton, Ohio, Estados Unidos) es un cantante, compositor,actor, escritor, pintor y director de cine estadounidense, conocido por su personalidad e imagen controvertidas como vocalista y líder de la banda de metal industrial Marilyn Manson. Su nombre artístico se formó a partir de los nombres de la actriz Marilyn Monroe y del convicto Charles Manson.
+				 No sólo se dedica a la música, sino también a la pintura. Figura en el lugar número 44 en la lista de los 100 mejores vocalistas de metal de todos los tiempos, y ostenta un puesto entre los 5 artistas del Industrial Metal más exitosos, certificando 50 millones de discos vendidos.</p>
 			</div>
 		</main>
 		<footer id="footer" class="contfo" >
-			<h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
+			<h5 >SITIOS OFICIALES</h5>
 			<article>
 				<a href="https://www.facebook.com/MarilynManson" target="_blank">
-					<img class="animacion__footer" src="img/f.png">
+					<img  src="img/f.png">
 				</a>
 			</article>
 			<article>
 				<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-					<img class="animacion__footer" src="img/in.png">
+					<img  src="img/in.png">
 				</a>
 			</article>
 			<article>
 				<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-					<img class="animacion__footer" src="img/yu.png">
+					<img  src="img/yu.png">
 				</a>
 			</article>
-			<article>
+			<article  >
 				<a href="https://www.marilynmanson.com/" target="_blank">
-					<img class="animacion__footer"  src="img/logo1.png">
+					<img  src="img/mm.png">
 				</a>
 			</article>
 			
