subida para entrega de sass y ceo

--- a/contacto.html
+++ b/contacto.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Seccion de contactos con desarrolladores de fanspage de Marilyn Manson">
+	<meta name="keywords" content="contacto marilyn manson, ultimas noticias, marilyn manson">
+	<meta name="author" content="Sebastian Rubilar">
+	<meta name="copyright" content="Sebastian Rubilar">
+	<meta name="robots" content="index, nofollow">
 	<link rel="shortcut  icon" href="img/nnn.ico">
 	<title>
-		Contacto-
+		Contacto Marilyn Manson FansPage
 	</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -45,14 +51,14 @@
 
 
 	<header  id="header" > 
-		<img  class="paddingto" src="img/marilyn-manson.gif">	
+		<img  class="paddingto" src="img/ggg.jpg" alt="imagen header marilyn manson"	>	
 	</header>
 
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main id="main">
-		<div class="flex">
+		<div class="flex ">
 			<form  id="form" action="envio.php">
-				<h1  class="paddingto">CONTACTOS Y SUGERENCIAS: 
+				<h1  class="paddingto text-center">CONTACTOS Y SUGERENCIAS: 
 				</h1>
 				<label for="">Nombre:</label>
 				<input type="text"  id="nombre" placeholder="Ingrese su nombre"required>
@@ -78,34 +84,34 @@
 					<label for="">Deseo recibir las ultimas noticias de la pagina:
 						<input type="checkbox" placeholder="Deseo recibir las ulimas noticias de la pagina" value="Deseo recibir las ulimas noticias de la pagina"></label>
 						<div class="text-center " >
-							<input  id="boton__cancelar" type="reset"  class="m-3"   value="Cancelar">
-							<input id="boton__enviar" type="submit"  name="Enviar">
+							<input  class=" boton__cancelar" type="reset"  class="m-3"   value="Cancelar">
+							<input class=" boton__enviar"  type="submit"  name="Enviar">
 						</div>
 					</div>
 					<!-FIN DE LA SECTION CONTACTO------>
 					</main>
 
 
-					<footer id="footer"  >
+					<footer id="footer" >
 						<h5 >SITIOS OFICIALES</h5>
 						<article>
 							<a href="https://www.facebook.com/MarilynManson" target="_blank">
-								<img  src="img/f.png">
+								<img  src="img/f.png"  alt="logo facebook marilyn manson">
 							</a>
 						</article>
 						<article>
 							<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-								<img  src="img/in.png">
+								<img  src="img/in.png" alt="logo instagram marilyn manson">
 							</a>
 						</article>
 						<article>
 							<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-								<img  src="img/yu.png">
+								<img  src="img/yu.png" alt="logo youtube marilyn manson">
 							</a>
 						</article>
 						<article>
 							<a href="https://www.marilynmanson.com/" target="_blank">
-								<img   src="img/mm.png">
+								<img   src="img/mm.png" alt="logo pagina oficial marilyn manson">
 							</a>
 						</article>
 
