--- a/discografia.html
+++ b/discografia.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Discografia completa de Marilyn Manson con enlaces para escuchar en youtube">
+	<meta name="keywords" content="marilyn manson, discografia, discografia de marilyn manson, albun marilyn manson, esuchar en youtube">
+	<meta name="author" content="Sebastian Rubilar">
+	<meta name="copyright" content="Sebastian Rubilar">
+	<meta name="robots" content="index, nofollow">
 	<link rel="shortcut  icon" href="img/nnn.ico">
 	<title >
-		Discografia Marilyn Manson-
+		Discografia Marilyn Manson 
 	</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -45,8 +51,8 @@
 		<img src=" img/disco.jpg" class="paddingto" alt="mariylyn manson foto">	
 	</header>
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
-	<main id="main">
-		<h1 >DISCOGRAFIA DE MARILYN MANSON</h1>
+	<main id="main" class="mt-3">
+		<h1 class="text-center m-5">DISCOGRAFIA DE MARILYN MANSON</h1>
 		<div class="flexdisco">   
 			<div >
 				<article >
@@ -62,13 +68,6 @@
 				</article>
 				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=uW94OQzDAMg" role="button " target="_blank">Escuchar en youtube</a>
 			</div >
-			<!-- <div >
-				<article >
-					<h4>Remix And Repent! - 1998</h4>
-					<img src="img/discos/ryr.jpg" alt="imagen del album 	antichrist superstar">
-				</article>
-				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=uW94OQzDAMg" role="button " target="_blank">Escuchar en youtube</a>
-			</div > -->
 			<div >
 				<article >
 					<h4 >Mechanical Animals - 1998</h4>
@@ -80,14 +79,14 @@
 				<article >
 					<h4 >The Last Tour On Earth - 1999</h4>
 
-					<img src="img/discos/thelast.jpg" alt="imagen del album 	the last tour on earth">
+					<img src="img/discos/thelast.jpg" alt="imagen del album the last tour on earth">
 				</article>
 				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=YERLixP10Ho&list=PLuIgBDZwi9eXHCbN4hf2zAq_Np_cO-1Kl" target="_blank" role="button">Escuchar en youtube</a>
 			</div>
 			<div >
 				<article>
 					<h4 >Holy Wood (In The Shadow Of The Valley Of Death) - 2000</h4>
-						<img src="img/discos/holly.jpg" alt="imagen del album 	Holy Wood (In The Shadow Of The Valley Of Death)">
+						<img src="img/discos/holly.jpg" alt="imagen del album Holy Wood (In The Shadow Of The Valley Of Death)">
 					</a>	
 				</article>
 				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=oM81q5WlDlc&list=PL6ogdCG3tAWgFvMVkAhZISG5g0vn-8lfr" target="_blank" role="button">Escuchar en youtube</a>
@@ -95,7 +94,7 @@
 			<div >
 				<article >
 					<h4>The Golden Age Of Grotesque- 2003</h4>	
-						<img src="img/discos/thegolden.jpg" alt="imagen del album 	The Golden Age Of Grotesque 2003">
+						<img src="img/discos/thegolden.jpg" alt="imagen del album The Golden Age Of Grotesque 2003">
 					</a>	
 				</article>
 				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=WGUzKMxb3NU" target="_blank" role="button">Escuchar en youtube</a>
@@ -104,23 +103,22 @@
 				<article >
 					<h4 >Lest We Forget The Best Of MM- 2004</h4>	
 
-					<img src="img/discos/thebest.jpg" alt="imagen del album 	The Golden Age Of Grotesque 2003">
+					<img src="img/discos/thebest.jpg" alt="imagen del album The Golden Age Of Grotesque 2003">
 					
 				</article>
 				<a class="btn btn-primary" href="https://www.youtube.com/watch?v=v6UkQqrkfuU&list=PLPhQKb2xhZJ_WXp_uf_VgpXz5hiIyIUvr" target="_blank"  role="button">Escuchar en youtube</a>
 			</div>
-
-			<div >
-				<article >
+			<div>
+				<article>
 					<h4 >Eat Me, Drink Me - 2007</h4>
-					<img src="img/discos/eatmedrinkme.jpg" alt="imagen del album 	Eat Me, Drink Me 2007">
+					<img src="img/discos/eatmedrinkme.jpg" alt="imagen del album Eat Me, Drink Me 2007">
 				</article>
 				<a class="btn btn-primary"  href="https://www.youtube.com/watch?v=q6BKiIcUq_s&list=PL5OU5WvFqBTiB3oUb-RxASnQ0G34aC7sF" target="_blank"  role="button">Escuchar en youtube</a>
 			</div>
 			<div >
 				<article >
 					<h4>The High End Of Low - 2009</h4>	
-					<img src="img/discos/high.jpg" alt="imagen del album 	The High End Of Low 2009">
+					<img src="img/discos/high.jpg" alt="imagen del album The High End Of Low 2009">
 					
 				</article>
 				<a class="btn btn-primary"  href="https://www.youtube.com/watch?v=LaEekA7WPLU&list=PLxzSZG7g8c8yvuP6uxXoFv-_tNsXjLspQ" target="_blank"  role="button">Escuchar en youtube</a>
@@ -163,22 +161,22 @@
 		<h5 >SITIOS OFICIALES</h5>
 		<article>
 			<a href="https://www.facebook.com/MarilynManson" target="_blank">
-				<img  src="img/f.png">
+				<img  src="img/f.png"  alt="logo facebook marilyn manson">
 			</a>
 		</article>
 		<article>
 			<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-				<img  src="img/in.png">
+				<img  src="img/in.png" alt="logo instagram marilyn manson">
 			</a>
 		</article>
 		<article>
 			<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-				<img src="img/yu.png">
+				<img src="img/yu.png" alt="logo youtube marilyn manson">
 			</a>
 		</article>
 		<article>
 			<a href="https://www.marilynmanson.com/" target="_blank">
-				<img src="img/mm.png">
+				<img src="img/mm.png" alt="logo pagina oficial marilyn manson">
 			</a>
 		</article>
 		
