--- a/galeria.html
+++ b/galeria.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut  icon" href="img/nnn.ico">
+  <meta name="keywords" content="galeria de imagenes de marilyn manson, imagenes, galeria, marilyn manson">
+  <meta name="author" content="Sebastian Rubilar">
+  <meta name="description" content="Galeria de las mejores imagenes de Marilyn Manson ">
+  <meta name="copyright" content="Sebastian Rubilar">
+  <meta name="robots" content="index, nofollow">
+  <link rel="shortcut  icon" href="img/nnn.ico" >
 	<title>
-		Galeria Marilyn Manson-
+		Galeria Marilyn Manson  FansPage
 	</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -40,46 +46,61 @@
   </div>
 </nav>
 <header id="header"> 
- <img  src="img/hh.jpg">	
+ <img  src="img/hh.jpg" alt="marilyn manson foto header">	
 </header>
 <main  id="main">
-  <h1 >GALERIA DE IMAGENES DE MARILYN MANSON</h1>
-  <div>
+  <h1 class="text-center">GALERIA DE IMAGENES DE MARILYN MANSON</h1>
+  <div >
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/galmm/z.jpg" class="d-block w-100" alt="...">
+          <img src="img/galmm/z.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 1">
         </div>
         <div class="carousel-item">
-          <img src="img/galmm/b.jpg" class="d-block w-100" alt="...">
+          <img src="img/galmm/x.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 2">
         </div>
         <div class="carousel-item">
-          <img src="img/galmm/c.jpg" class="d-block w-100" alt="...">
+          <img src="img/galmm/c.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 3">
         </div>
         <div class="carousel-item">
-          <img src="img/galmm/d.jpg" class="d-block w-100" alt="...">
+          <img src="img/galmm/d.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 4">
         </div>
         <div class="carousel-item">
-          <img src="img/galmm/e.jpg" class="d-block w-100" alt="...">
+          <img src="img/galmm/e.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 5">
         </div>
         
         <div class="carousel-item">
-          <img src="img/galmm/h.png" class="d-block w-100" alt="...">
+          <img src="img/galmm/h.png" class="d-block w-100" alt="imagen de marilyn manson en carrusel 6">
         </div>
         <div class="carousel-item">
-          <img src="img/galmm/i.jpg" class="d-block w-100" alt="...">
+          <img src="img/galmm/i.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 7">
         </div>
         <div class="carousel-item">
-          <img src="img/galmm/j.jpg" class="d-block w-100" alt="...">
+          <img src="img/galmm/j.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 8">
         </div>
         <div class="carousel-item">
-          <img src="img/galmm/k.jpg" class="d-block w-100" alt="...">
+          <img src="img/galmm/k.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 9">
         </div>
         <div class="carousel-item">
-          <img src="img/galmm/l.jpg" class="d-block w-100" alt="...">
+          <img src="img/galmm/l.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 10">
         </div>
         <div class="carousel-item">
-          <img src="img/galmm/m.jpg" class="d-block w-100" alt="...">
+          <img src="img/galmm/m.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 11">
+        </div>
+      <div class="carousel-item">
+          <img src="img/galmm/n.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 12">
+        </div>
+      <div class="carousel-item">
+          <img src="img/galmm/o.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 13">
+        </div>
+      <div class="carousel-item">
+          <img src="img/galmm/p.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 14">
+        </div>
+      <div class="carousel-item">
+          <img src="img/galmm/r.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 15">
+        </div>
+      <div class="carousel-item">
+          <img src="img/galmm/s.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 16">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -95,27 +116,28 @@
     <div >
       <img src="img/giphy.gif" class="d-block w-100">
     </div>
+    </div>
   </main>
   <footer id="footer">
-   <h5 >SITIOS OFICIALES</h5>
+   <h5>SITIOS OFICIALES</h5>
    <article>
     <a href="https://www.facebook.com/MarilynManson" target="_blank">
-     <img src="img/f.png">
+     <img src="img/f.png"  alt="logo facebook marilyn manson">
    </a>
  </article>
  <article>
   <a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-   <img  src="img/in.png">
+   <img  src="img/in.png"  alt="logo instagram marilyn manson">
  </a>
 </article>
 <article>
   <a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-   <img  src="img/yu.png">
+   <img  src="img/yu.png" alt="logo youtube marilyn manson">
  </a>
 </article>
 <article>
   <a href="https://www.marilynmanson.com/" target="_blank">
-   <img  src="img/mm.png">
+   <img  src="img/mm.png" alt="logo pagina oficial marilyn manson">
  </a>
 </article>
 
