--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Pagina no oficial de Marilyn Manson donde encontraras galeria de imagenes, tours historicos, discografias y muchas cosas mas">
+	<meta name="keywords" content="Pagina no oficial de marilyn manson, marilyn manson, musica alternativa">
+	<meta name="author" content="Sebastian Rubilar">
+	<meta name="copyright" content="Sebastian Rubilar">
+	<meta name="robots" content="index, nofollow">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="shortcut  icon" href="img/nnn.ico">
 	<title>
-		Marilyn Manson FanPage
+		Marilyn Manson FanPage Argentina
 	</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -40,36 +46,35 @@
 		</div>
 	</nav>
 	<header id="header"> 
-		<img class="paddingto" src=" img/home666.jpg">	
+		<img class="paddingto" src=" img/home666.jpg" alt="imagen header marilyn manson">
 	</header>
-		<main id="main" class="flex">   
-
-			<div >
-				<h1 >MARILYN MANSON</h1>
+	<main id="main" class="mt-3">   
+			<div class="flex">
+				<h1 class="text-left m-5 ">MARILYN MANSON</h1>
 				<p>Marilyn Manson (nacido Brian Hugh Warner, 5 de enero de 1969, Canton, Ohio, Estados Unidos) es un cantante, compositor,actor, escritor, pintor y director de cine estadounidense, conocido por su personalidad e imagen controvertidas como vocalista y líder de la banda de metal industrial Marilyn Manson. Su nombre artístico se formó a partir de los nombres de la actriz Marilyn Monroe y del convicto Charles Manson.
 				 No sólo se dedica a la música, sino también a la pintura. Figura en el lugar número 44 en la lista de los 100 mejores vocalistas de metal de todos los tiempos, y ostenta un puesto entre los 5 artistas del Industrial Metal más exitosos, certificando 50 millones de discos vendidos.</p>
 			</div>
-		</main>
+	</main>
 		<footer id="footer" class="contfo" >
 			<h5 >SITIOS OFICIALES</h5>
 			<article>
 				<a href="https://www.facebook.com/MarilynManson" target="_blank">
-					<img  src="img/f.png">
+					<img  src="img/f.png" alt="logo facebook marilyn manson">
 				</a>
 			</article>
 			<article>
 				<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-					<img  src="img/in.png">
+					<img  src="img/in.png" alt="logo instagram marilyn manson">
 				</a>
 			</article>
 			<article>
 				<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-					<img  src="img/yu.png">
+					<img  src="img/yu.png" alt="logo youtube marilyn manson">
 				</a>
 			</article>
 			<article  >
 				<a href="https://www.marilynmanson.com/" target="_blank">
-					<img  src="img/mm.png">
+					<img  src="img/mm.png" alt="logo pagina oficial marilyn manson">
 				</a>
 			</article>
 			
