--- a/tour.html
+++ b/tour.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content=" tours historicos de marilyn manson con fechas y descripciones">
+	<meta name="keywords" content="tours marilyn manson, tour historicos, gira marilyn manson">
+	<meta name="author" content="Sebastian Rubilar">
+	<meta name="copyright" content="Sebastian Rubilar">
+	<meta name="robots" content="index, nofollow">
 	<link rel="shortcut  icon" href="img/nnn.ico">
 	<title>
-		Tour Marilyn Manson- 
+		Tours Marilyn Manson  FansPage 
 	</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -44,17 +50,16 @@
 
 	<!---FIN DEL NAVE--->
 	<header id="header" >
-		<img src=" img/black.jpg" alt="marilyn manson foto"> 
+		<img src=" img/black.jpg" alt="marilyn manson foto" alt="imagen header marilyn manson">	> 
 	</header>	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main  class="flex2 " id="main">
-		<h1 class="margin2 paddingto ">HISTORIAL DE TOURS</h1> 
-		<table class="table table-bordered  -´+">
+		<h1 class="margin2 paddingto text-center">HISTORIAL DE TOURS</h1> 
+		<table class="m-5 table-bordered">
 			<thead>
 				<tr>
 					<th scope="col">AÑO</th>
 					<th scope="col">NOMBRE</th>
 					<th scope="col">INFORMACION</th>
-					<th scope="col">CANTIDAD DE FECHAS</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -64,7 +69,6 @@
 					<td>Disco en promoción: Antichrist Superstar
 						Fecha de inicio: 7 de septiembre de 1996
 					Fecha final: 17 de septiembre de 1997</td>
-					<td>175</td>
 				</tr>
 				<tr>
 					<th scope="row">1998-1999</th>
@@ -73,8 +77,6 @@
 						Fecha de inicio: 25 de octubre de 1998
 						Fecha final: 31 de enero de 1999
 					</td>
-					<td>46 (52 planeadas)
-					</td>
 				</tr>
 				<tr>
 					<th scope="row">2000-2001</th>
@@ -82,51 +84,19 @@
 					<td>Disco en promoción: Holy Wood (In the Shadow of the Valley of Death)
 						Fecha de inicio: 27 de octubre de 2000
 					Fecha final: 2 de septiembre de 2001</td>
-					<td>107 (109 planeadas)</td>
-				</tr>
 				<tr>
 					<th scope="row">2003</th>
 					<td >Grotesk Burlesk Tour</td>
 					<td>Disco en promoción: The Golden Age of Grotesque
 						Fecha de inicio: 11 de abril de 2003
 					Fecha final: 27 de diciembre de 2003</td>
-					<td>105
-					(108 planeadas)</td>
 				</tr>
 				<tr>
 					<th scope="row">2004-2005</th>
 					<td >Against All Gods Tour</td>
-					<td>Disco en promoción: Lest We Forget: The Best Of
+					<td>Disco en promoción: Lest We Forget: The Best Of 
 						Fecha de inicio: 27 de octubre de 2004
-					Fecha final: 31 de agosto de 2005</td>
-					<td>63
-					(64 planeadas)</td>
-				</tr>
-				<tr>
-					<th scope="row">2007-2008</th>
-					<td >Rape of the World Tour</td>
-					<td>Disco en promoción: Eat Me, Drink Me
-						Fecha de inicio: 26 de mayo de 2007
-					Fecha final: 2 de marzo de 2008</td>
-					<td>122</td>
-				</tr>  
-				<tr>
-					<th scope="row">2012-2013</th>
-					<td >Hey, Cruel World...Tour</td>
-					<td>Disco en promoción: Born Villain
-						Fecha de inicio: 24 de febrero de 2012
-					Fecha final: 21 de julio de 2013</td>
-					<td>163
-						(167 planeadas)
-						(36 junto a Rob Zombie)
-					(19 junto a Alice Cooper)</td>
-				</tr>
-				<tr>
-					<th scope="row">2015</th>
-					<td >The Hell Not Hallelujah Tour</td>
-					<td>Disco en promoción: The Pale Emperor
-					Fecha de inicio: 21 de enero de 2015</td>
-					<td>666</td>
+					Fecha final: 31 de agosto de 2005</td>	
 				</tr>
 			</tbody>
 		</table>
@@ -135,22 +105,23 @@
 		<h5 >SITIOS OFICIALES</h5>
 		<article>
 			<a href="https://www.facebook.com/MarilynManson" target="_blank">
-				<img src="img/f.png">
+				<img src="img/f.png"  alt="logo facebook marilyn manson">
 			</a>
 		</article>
 		<article>
 			<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-				<img src="img/in.png">
+				<img src="img/in.png" alt="logo instagram marilyn manson">
+			
 			</a>
 		</article>
 		<article>
 			<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-				<img src="img/yu.png">
+				<img src="img/yu.png"  alt="logo youtube marilyn manson">
 			</a>
 		</article>
 		<article>
 			<a href="https://www.marilynmanson.com/" target="_blank">
-				<img  src="img/mm.png">
+				<img  src="img/mm.png" alt="logo pagina oficial marilyn manson">
 			</a>
 		</article>
 
