modificacion de colores y fuentes degradado

--- a/tour.html
+++ b/tour.html
@@ -50,7 +50,7 @@
 
 	<!---FIN DEL NAVE--->
 	<header id="header" >
-		<img src=" img/black.jpg" alt="marilyn manson foto" alt="imagen header marilyn manson">	> 
+		<img src=" img/new.jpg" alt="marilyn manson foto" alt="imagen header marilyn manson">	> 
 	</header>	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main  class="flex2 " id="main">
 		<h1 class="margin2 paddingto text-center">HISTORIAL DE TOURS</h1> 
