--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 		</div>
 	</nav>
 	<header id="header"> 
-		<img class="paddingto" src=" img/home666.jpg" alt="imagen header marilyn manson">
+		<img  src=" img/galmm/x.jpg" alt="imagen header marilyn manson">
 	</header>
-	<main id="main" class="mt-3">   
-			<div class="flex">
-				<h1 class="text-left m-5 ">MARILYN MANSON</h1>
-				<p>Marilyn Manson (nacido Brian Hugh Warner, 5 de enero de 1969, Canton, Ohio, Estados Unidos) es un cantante, compositor,actor, escritor, pintor y director de cine estadounidense, conocido por su personalidad e imagen controvertidas como vocalista y líder de la banda de metal industrial Marilyn Manson. Su nombre artístico se formó a partir de los nombres de la actriz Marilyn Monroe y del convicto Charles Manson.
+	<main id="main" class="flex">   
+			<div >
+				<h1 class="text-center mt-5">MARILYN MANSON</h1>
+				<p class="m-4">Marilyn Manson (nacido Brian Hugh Warner, 5 de enero de 1969, Canton, Ohio, Estados Unidos) es un cantante, compositor,actor, escritor, pintor y director de cine estadounidense, conocido por su personalidad e imagen controvertidas como vocalista y líder de la banda de metal industrial Marilyn Manson. Su nombre artístico se formó a partir de los nombres de la actriz Marilyn Monroe y del convicto Charles Manson.
 				 No sólo se dedica a la música, sino también a la pintura. Figura en el lugar número 44 en la lista de los 100 mejores vocalistas de metal de todos los tiempos, y ostenta un puesto entre los 5 artistas del Industrial Metal más exitosos, certificando 50 millones de discos vendidos.</p>
 			</div>
 	</main>
