--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body class="contenedorgridcont">
+<body class="contenedorgridcont ani">
 	<nav id="nav" class="navbar navbar-expand-md ">
 		<div class="container-fluid j">
 			<!-- este es el boton mcdonald -->
