--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body class="contenedorgrid ">
+<body class="contenedorgrid ani">
 	<nav id="nav" class="navbar navbar-expand-md ">
 		<div class="container-fluid">
 			<!-- este es el boton mcdonald -->
