--- a/tour.html
+++ b/tour.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body class="contenedorgridtour">
+<body class="contenedorgridtour ani">
 	<nav id="nav" class="navbar navbar-expand-md j fx">
 		<div class="container-fluid">
 			<!-- este es el boton mcdonald -->
@@ -52,7 +52,7 @@
 	<header id="header" >
 		<img src=" img/new.jpg" alt="marilyn manson foto" alt="imagen header marilyn manson">	> 
 	</header>	<!-- FIN DEL HEADER (UNA IMAGEN)---->
-	<main  class="flex2 " id="main">
+	<main  class="flex2" id="main">
 		<h1 class="margin2 paddingto text-center">HISTORIAL DE TOURS</h1> 
 		<table class="m-5 table-bordered">
 			<thead>
