subida sass y seo

--- a/contacto.html
+++ b/contacto.html
@@ -56,8 +56,8 @@
 
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main id="main" >
-		<div class="flex ">
-			<form  id="form" action="envio.php">
+		<div class="flex">
+			<form  id="form" action="error404.html">
 				<h1  class="paddingto text-center">CONTACTOS Y SUGERENCIAS: 
 				</h1>
 				<label for="">Nombre:</label>
