--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body class="contenedorgridcont ani">
+<body class="contenedorgridcont ani background-body">
 	<nav id="nav" class="navbar navbar-expand-md ">
 		<div class="container-fluid j">
 			<!-- este es el boton mcdonald -->
@@ -55,8 +55,8 @@
 	</header>
 
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
-	<main id="main" >
-		<div class="flex">
+	<main id="main"  >
+		<div class="flex ani">
 			<form  id="form" action="error404.html">
 				<h1  class="paddingto text-center">CONTACTOS Y SUGERENCIAS: 
 				</h1>
