--- a/error404.html
+++ b/error404.html
@@ -11,22 +11,23 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="shortcut  icon" href="img/nnn.ico">
 	<title>
-		Marilyn Manson Fanspage Error 404
+		M M Fanspage Error 404
 	</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
 </head>
 
-<body>
-<header>
+<body class="contenedor ani">
 
-</header>
-
-<main>
-	<link rel="stylesheet" type="text/css" href="https://editor.flixier.com/share/U1LZx45G">
-
+<main >
+	<div class="flex text-center">
+	<img  class="luna" src="img/404.png">
+	<img class="astro rebote" src="img/astro.png">
+	<img class="nave" src="img/nave.png">
+	<div class="text-center error4">
+	<h2 class="texto404">ERROR 404 <br>-page no found-  </h2>
+<a class="btn boton-404 m-3" href="index.html" role="button" >VOLVER A LA PAGINA PRINCIPAL</a>
+</div>
 </main>
-
-
 </body>
 </html>
