--- a/discografia.html
+++ b/discografia.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body class="contenedorgriddisco">	
+<body class="contenedorgriddisco body-gale">	
 	<nav id="nav" class="navbar navbar-expand-md ">
 		<div class="container-fluid">
 			<!-- este es el boton mcdonald -->
