--- a/tour.html
+++ b/tour.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body class="contenedorgridtour ani">
+<body class="contenedorgridtour ani body-back">
 	<nav id="nav" class="navbar navbar-expand-md j fx">
 		<div class="container-fluid">
 			<!-- este es el boton mcdonald -->
