--- a/galeria.html
+++ b/galeria.html
@@ -16,7 +16,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body class="contenedorgridgaleria">
+<body class="contenedorgridgaleria body-gale ">
 	<nav id="nav" class="navbar navbar-expand-md">
     <div class="container-fluid">
      <!-- este es el boton mcdonald -->
