--- a/contacto.html
+++ b/contacto.html
@@ -51,13 +51,13 @@
 
 
 	<header  id="header" > 
-		<img  class="paddingto" src="img/ggg.jpg" alt="imagen header marilyn manson"	>	
+		<img src="img/ggg.jpg" alt="imagen header marilyn manson"	>	
 	</header>
 
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main id="main"  >
 		<div class="flex ani">
-			<form  id="form" action="error404.html">
+			<form  id="form" action="error404.html" class="contenedor_contactos-fondo">
 				<h1  class="paddingto text-center">CONTACTOS Y SUGERENCIAS: 
 				</h1>
 				<label for="">Nombre:</label>
