--- a/discografia.html
+++ b/discografia.html
@@ -47,8 +47,7 @@
 		</div>
 	</nav>
 	<header id="header" > 
-
-		<img src=" img/disco.jpg" class="paddingto" alt="mariylyn manson foto">	
+		<img src=" img/pesa.jpg" alt="mariylyn manson foto">	
 	</header>
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main id="main" class="mt-3">
