--- a/galeria.html
+++ b/galeria.html
@@ -51,7 +51,7 @@
 <main  id="main">
   <h1 class="text-center">GALERIA DE IMAGENES DE MARILYN MANSON</h1>
   <div >
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide blanco" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="img/galmm/z.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 1">
@@ -109,10 +109,9 @@
         <span class="visually-hidden">Next</span>
       </button>
       <h2 class="m-3">Desplaza las imagenes con los controles de los bordes o dezplaza con el dedo</h2>
+    
     </div>
-    <div >
-      <img src="img/giphy.gif" class="d-block w-100">
-    </div>
+      <img src="img/giphy.gif" class=" w-100">
     </div>
   </main>
   <footer id="footer">
