--- a/index.html
+++ b/index.html
@@ -16,44 +16,43 @@
 	</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body class="contenedorgrid ani body-back">
-	<nav id="nav" class="navbar navbar-expand-md ">
-		<div class="container-fluid">
-			<!-- este es el boton mcdonald -->
-			<a  href="index.html"><img  src="img/mm.png" alt= "logo de marilyn manson"> </a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse " id="navbarNav">
-				<ul >
-					<li class="nav-item">
-						<a class="nav-link ul" aria-current="page" href="index.html">HOME</a>
-					</li>
-					<li class="nav-item ">
-						<a class="nav-link" href="discografia.html">DISCOGRAFIA</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="galeria.html">GALERIA</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="tour.html">TOUR</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contacto.html">CONTACTO</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+<body class="contenedorgrid ani ">
+	<nav id="nav" class="navbar navbar-expand-md">
+    <div class="container-fluid">
+     <!-- este es el boton mcdonald -->
+     <a  href="index.html"><img  src="img/mm.png"  alt= "logo de marilyn manson"> </a>
+     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul >
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="index.html">HOME</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" href="discografia.html">DISCOGRAFIA</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="galeria.html">GALERIA</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="tour.html">TOUR</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contacto.html">CONTACTO</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 	<header id="header"> 
-		<img  src=" img/galmm/x.jpg" alt="imagen header marilyn manson">
+		<img  src=" img/mae.gif" alt="imagen header marilyn manson">
 	</header>
 	<main id="main" class="flex">   
-			<div >
-				<h1 class="text-center mt-5">MARILYN MANSON</h1>
-				<p class="m-4">Marilyn Manson (nacido Brian Hugh Warner, 5 de enero de 1969, Canton, Ohio, Estados Unidos) es un cantante, compositor,actor, escritor, pintor y director de cine estadounidense, conocido por su personalidad e imagen controvertidas como vocalista y líder de la banda de metal industrial Marilyn Manson. Su nombre artístico se formó a partir de los nombres de la actriz Marilyn Monroe y del convicto Charles Manson.
-				 No sólo se dedica a la música, sino también a la pintura. Figura en el lugar número 44 en la lista de los 100 mejores vocalistas de metal de todos los tiempos, y ostenta un puesto entre los 5 artistas del Industrial Metal más exitosos, certificando 50 millones de discos vendidos.</p>
-			</div>
+				<h1 class="text-center">MARILYN MANSON</h1>
+				<p >Brian Hugh Warner, 5 de enero de 1969, Canton, Ohio, Estados Unidos) es un cantante, compositor,actor, escritor, pintor y director de cine estadounidense, y líder de la banda de metal industrial Marilyn Manson. 
+				</p>
+			<img class="imgm " src="img/galmm/k.jpg">
 	</main>
 		<footer id="footer" class="contfo" >
 			<h5 >SITIOS OFICIALES</h5>
