--- a/tour.html
+++ b/tour.html
@@ -50,10 +50,10 @@
 
 	<!---FIN DEL NAVE--->
 	<header id="header" >
-		<img src=" img/new.jpg" alt="marilyn manson foto" alt="imagen header marilyn manson">	> 
+		<img src=" img/w.jpg" alt="marilyn manson foto" 	> 
 	</header>	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main  class="flex2" id="main">
-		<h1 class="margin2 paddingto text-center">HISTORIAL DE TOURS</h1> 
+		<h1 class="margin2 text-center">HISTORIAL DE TOURS</h1> 
 		<table class="m-5 table-bordered">
 			<thead>
 				<tr>
