--- a/contacto.html
+++ b/contacto.html
@@ -58,7 +58,7 @@
 	<main id="main"  >
 		<div class="flex ani">
 			<form  id="form" action="error404.html" class="contenedor_contactos-fondo">
-				<h1  class="paddingto text-center">CONTACTOS Y SUGERENCIAS: 
+				<h1  class=" m-2 text-center">CONTACTOS Y SUGERENCIAS: 
 				</h1>
 				<label for="">Nombre:</label>
 				<input type="text"  id="nombre" placeholder="Ingrese su nombre"required>
