--- a/discografia.html
+++ b/discografia.html
@@ -51,7 +51,7 @@
 	</header>
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main id="main" class="mt-3">
-		<h1 class="text-center m-5">DISCOGRAFIA DE MARILYN MANSON</h1>
+		<h1 class="text-center">DISCOGRAFIA DE MARILYN MANSON</h1>
 		<div class="flexdisco">   
 			<div >
 				<article >
