--- a/tour.html
+++ b/tour.html
@@ -53,7 +53,7 @@
 		<img src=" img/w.jpg" alt="marilyn manson foto" 	> 
 	</header>	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main  class="flex2" id="main">
-		<h1 class="margin2 text-center">HISTORIAL DE TOURS</h1> 
+		<h1 class="text-center m-2">HISTORIAL DE TOURS</h1> 
 		<table class="m-5 table-bordered">
 			<thead>
 				<tr>
