--- a/contacto.html
+++ b/contacto.html
@@ -56,7 +56,7 @@
 
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main id="main"  >
-		<div class="flex ani">
+		<div class="flex ani pt-4">
 			<form  id="form" action="error404.html" class="contenedor_contactos-fondo">
 				<h1  class=" m-2 text-center">CONTACTOS Y SUGERENCIAS: 
 				</h1>
