--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	</header>
 	<main id="main" class="flex">   
 				<h1 class="text-center ">MARILYN MANSON</h1>
-				<p >Brian Hugh Warner, 5 de enero de 1969, Canton, Ohio, Estados Unidos) es un cantante, compositor,actor, escritor, pintor y director de cine estadounidense, y líder de la banda de metal industrial Marilyn Manson. 
+				<p >Brian Hugh Warner es un cantante, compositor,actor, escritor, pintor y director de cine estadounidense, y líder de la banda de metal industrial Marilyn Manson. 
 				</p>
 			<img class="imgm " src="img/galmm/k.jpg">
 	</main>
