--- a/tour.html
+++ b/tour.html
@@ -100,6 +100,7 @@
 				</tr>
 			</tbody>
 		</table>
+		<img class="contenedorimg" src="img/svg.png">
 	</main>
 	<footer id="footer" >
 		<h5 >SITIOS OFICIALES</h5>
