--- a/galeria.html
+++ b/galeria.html
@@ -49,9 +49,9 @@
  <img  src="img/hh.jpg" alt="marilyn manson foto header">	
 </header>
 <main  id="main">
-  <h1 class="text-center">GALERIA DE IMAGENES DE MARILYN MANSON</h1>
+  
   <div >
-    <div id="carouselExampleControls" class="carousel slide blanco" data-bs-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide blanco negrito" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="img/galmm/z.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 1">
@@ -108,10 +108,11 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-      <h2 class="m-3">Desplaza las imagenes con los controles de los bordes o dezplaza con el dedo</h2>
+      <h1 class="text-center">GALERIA DE IMAGENES DE MARILYN MANSON</h1>
+      <h3 class="m-3">Desplaza las imagenes con los controles de los bordes o dezplaza con el dedo</h3>
     
     </div>
-      <img src="img/giphy.gif" class=" w-100">
+      <img src="img/giphy.gif" class="bordergif w-100">
     </div>
   </main>
   <footer id="footer">
