--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 	<header id="header"> 
 		<img  src=" img/mae.gif" alt="imagen header marilyn manson">
 	</header>
-	<main id="main" class="flex">   
+	<main id="main" class="flex  ">   
 				<h1 class="text-center ">MARILYN MANSON</h1>
 				<p >Brian Hugh Warner es un cantante, compositor,actor, escritor, pintor y director de cine estadounidense, y líder de la banda de metal industrial Marilyn Manson. 
 				</p>
-			<img class="imgm " src="img/galmm/k.jpg">
+			<img class="imgm  animate-bg" src="img/galmm/k.jpg">
 	</main>
 		<footer id="footer" class="contfo" >
 			<h5 >SITIOS OFICIALES</h5>
