--- a/tour.html
+++ b/tour.html
@@ -54,7 +54,7 @@
 	</header>	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main  class="flex2" id="main">
 		<h1 class="text-center m-2">HISTORIAL DE TOURS</h1> 
-		<table class="m-5 table-bordered">
+		<table class="m-5 table-bordered animaciontour ani_tour">
 			<thead>
 				<tr>
 					<th scope="col">AÑO</th>
