comiteada de lnes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body class="contenedorgrid ani ">
+<body class="contenedorgrid ">
 	<nav id="nav" class="navbar navbar-expand-md">
     <div class="container-fluid">
      <!-- este es el boton mcdonald -->
@@ -45,14 +45,14 @@
     </div>
   </div>
 </nav>
-	<header id="header"> 
+	<!-- <header id="header"> 
 		<img  src=" img/mae.gif" alt="imagen header marilyn manson">
-	</header>
-	<main id="main" class="flex  ">   
-				<h1 class="text-center ">MARILYN MANSON</h1>
-				<p >Brian Hugh Warner es un cantante, compositor,actor, escritor, pintor y director de cine estadounidense, y líder de la banda de metal industrial Marilyn Manson. 
-				</p>
-			<img class="imgm  animate-bg" src="img/galmm/k.jpg">
+	</header> -->
+	<main id="main" class="flex" > 
+	<div class="text-center cajaa">  
+				<h1 >MARILYN MANSON FANSPAGE</h1>
+				
+			</div>
 	</main>
 		<footer id="footer" class="contfo" >
 			<h5 >SITIOS OFICIALES</h5>
